// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-section-title SSR > renders defaults 1`] = `
"<div
  class="section-title"
>
  <div
    class="section-title__title-container"
  >
    <h2
      class="section-title__title"
    >
      Today's Deals - All With Free Shipping
    </h2>
    <span
      class="section-title__subtitle"
    >
      Plus, guaranteed best prices.
    </span>
  </div>
</div>"
`;

exports[`evo-section-title SSR > renders icon and see all 1`] = `
"<div
  class="section-title"
>
  <div
    class="section-title__title-container"
  >
    <h2
      class="section-title__title"
    >
      Today's Deals - All With Free Shipping
    </h2>
    <span
      class="section-title__subtitle"
    >
      Plus, guaranteed best prices.
    </span>
  </div>
  <div
    class="section-title__info"
  >
    <button
      aria-label="Save"
      class="icon-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2.536a6.136 6.136 0 0 0-1.448-1.053A4.409 4.409 0 0 0 4.5 1c-1.55 0-2.709.634-3.461 1.554C.31 3.443 0 4.55 0 5.5c0 .918.348 1.711.704 2.292.36.586.77 1.023.978 1.237 4.193 4.327 4.91 5.011 5.624 5.691a.996.996 0 0 0 1.388 0c.714-.68 1.43-1.364 5.624-5.69a7.23 7.23 0 0 0 .978-1.238c.356-.58.704-1.374.704-2.292 0-.95-.312-2.057-1.039-2.946C14.21 1.634 13.05 1 11.5 1c-.625 0-1.311.107-2.052.483-.48.244-.96.588-1.448 1.053Zm-.778 2.093c-.635-.753-1.155-1.15-1.574-1.362A2.412 2.412 0 0 0 4.5 3c-.95 0-1.541.366-1.914.82A2.73 2.73 0 0 0 2 5.5c0 .415.161.842.409 1.246.245.398.535.711.71.891 2.97 3.065 4.183 4.289 4.881 4.974.698-.685 1.912-1.91 4.882-4.974.174-.18.464-.493.71-.891.247-.404.408-.83.408-1.246a2.73 2.73 0 0 0-.586-1.68C13.04 3.367 12.45 3 11.5 3c-.375 0-.739.06-1.148.267-.42.213-.94.609-1.574 1.362a.998.998 0 0 1-1.208.274.994.994 0 0 1-.348-.274Z"
            fill-rule="evenodd"
          />
        </symbol>
        <use
          href="#icon-heart-16"
        />
      </svg>
    </button>
  </div>
  <a
    class="section-title__cta"
    href="https://www.ebay.com"
  >
    See All
  </a>
</div>"
`;

exports[`evo-section-title SSR > renders with a custom heading level 1`] = `
"<div
  class="section-title"
>
  <div
    class="section-title__title-container"
  >
    <h3
      class="section-title__title"
    >
      Today's Deals - All With Free Shipping
    </h3>
  </div>
</div>"
`;

exports[`evo-section-title SSR > renders with cta 1`] = `
"<div
  class="section-title"
>
  <div
    class="section-title__title-container"
  >
    <h2
      class="section-title__title"
    >
      Today's Deals - All With Free Shipping
    </h2>
    <span
      class="section-title__subtitle"
    >
      Plus, guaranteed best prices.
    </span>
  </div>
  <a
    class="section-title__cta"
    href="https://www.ebay.com"
  >
    See All
  </a>
</div>"
`;

exports[`evo-section-title SSR > renders with infotip 1`] = `
"<div
  class="section-title"
>
  <div
    class="section-title__title-container"
  >
    <h2
      class="section-title__title"
    >
      Today's Deals - All With Free Shipping
    </h2>
    <span
      class="section-title__subtitle"
    >
      Plus, guaranteed best prices.
    </span>
  </div>
  <div
    class="section-title__info"
  >
       
    <span
      class="infotip"
    >
      <button
        aria-expanded="false"
        aria-label="Important information"
        class="infotip__host icon-btn icon-btn--transparent"
        id="GENERATED-0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-1"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 7a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1Zm1-2a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
            />
            <path
              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm2 0a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"
            />
          </symbol>
          <use
            href="#icon-information-16"
          />
        </svg>
      </button>
      <span
        aria-labelledby="GENERATED-4"
        class="infotip__overlay"
        id="GENERATED-2"
        role="tooltip"
        style="visibility:hidden"
      >
        <span
          class="infotip__pointer"
          id="GENERATED-3"
        />
        <span
          class="infotip__mask"
        >
          <span
            class="infotip__cell"
          >
            <span
              class="infotip__content"
            >
              <span
                class="infotip__heading"
                id="GENERATED-4"
              >
                Important
              </span>
              This is some important info
            </span>
            <button
              aria-label="Dismiss infotip"
              class="infotip__close icon-btn icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--16"
              >
                <symbol
                  id="GENERATED-5"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
                  />
                </symbol>
                <use
                  href="#icon-close-16"
                />
              </svg>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>"
`;

exports[`evo-section-title SSR > renders with no subtitle 1`] = `
"<div
  class="section-title"
>
  <div
    class="section-title__title-container"
  >
    <h2
      class="section-title__title"
    >
      Today's Deals - All With Free Shipping
    </h2>
    <span
      class="section-title__subtitle"
    >
      Plus, guaranteed best prices.
    </span>
  </div>
</div>"
`;

exports[`evo-section-title SSR > renders with overflow 1`] = `
"<div
  class="section-title"
>
  <div
    class="section-title__title-container"
  >
    <h2
      class="section-title__title"
    >
      Today's Deals - All With Free Shipping
    </h2>
    <span
      class="section-title__subtitle"
    >
      Plus, guaranteed best prices.
    </span>
  </div>
  <div
    class="section-title__overflow"
  >
    <span
      aria-label="eBay Menu"
      class="menu-button"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="button"
        class="menu-button__button icon-btn"
        type="button"
        variant="icon"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
            />
          </symbol>
          <use
            href="#icon-overflow-vertical-16"
          />
        </svg>
      </button>
      <span
        class="menu-button__menu"
        style="visibility:hidden"
        tabindex="-1"
      >
        <div
          class="menu-button__items"
          id="GENERATED-1"
          role="menu"
        >
          <div
            class="menu-button__item"
            data-value="0"
            role="menuitem"
            tabindex="0"
          >
            <span>
              item 1
            </span>
            <svg
              aria-hidden="true"
              class="icon icon--16"
            >
              <symbol
                id="GENERATED-2"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                  fill-rule="evenodd"
                />
              </symbol>
              <use
                href="#icon-tick-16"
              />
            </svg>
          </div>
          <div
            class="menu-button__item"
            data-value="1"
            role="menuitem"
            tabindex="-1"
          >
            <span>
              item 2
            </span>
            <svg
              aria-hidden="true"
              class="icon icon--16"
            >
              <use
                href="#icon-tick-16"
              />
            </svg>
          </div>
          <div
            class="menu-button__item"
            data-value="2"
            role="menuitem"
            tabindex="-1"
          >
            <span>
              item 3
            </span>
            <svg
              aria-hidden="true"
              class="icon icon--16"
            >
              <use
                href="#icon-tick-16"
              />
            </svg>
          </div>
        </div>
      </span>
    </span>
  </div>
</div>"
`;
